remove tada from map to prevent weird color distortion

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,12 +1,15 @@
 .nav {
   position: "static" !important;
   z-index: 100 !important;
-  background-color: #2e7d32 !important;
+  /* background-color: #2e7d32 !important; */
+  opacity: 0.9;
 }
 
 @media (max-width: 768px) {
   .nav {
     position: fixed !important;
+    opacity: 0.9;
+    /* background-color: #2e7d32; */
   }
 }
 
@@ -14,8 +17,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* opacity: 0.9; */
+  /* background-color: #2e7d32; */
 }
 
 .nav-span {
   background-color: #2e7d32;
+  opacity: 0.9;
 }
